--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.5",
+    "react-scripts": "^3.1.1",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0"
   },
